--- a/Project1/packages.config
+++ b/Project1/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="5.0.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="5.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="1.9.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
