--- a/Project1/HelloWorld.csproj
+++ b/Project1/HelloWorld.csproj
@@ -145,6 +145,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\User.cs" />
+    <Compile Include="UserRepository.cs" />
     <Compile Include="_DELETEIsAdministratorAttribute.cs" />
     <Compile Include="LoggingAttribute.cs" />
     <Compile Include="Models\GuestResponse.cs" />
