--- a/Project1/SimpleCstructor/SimpleCstructor.csproj
+++ b/Project1/SimpleCstructor/SimpleCstructor.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\_BasicLayout.cshtml" />
     <Content Include="Views\Home\LogOn.cshtml" />
+    <Content Include="Views\Home\Enrollinclass.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
